@@ -10,5 +10,6 @@ namespace FB2EPubConverter.Interfaces
         void ConvertPath(string inputPath, string outputFolder, IProgressUpdateInterface progress);
         void ConvertList(string[] files, string outputFolder, IProgressUpdateInterface progress);
         void ConvertXml(XDocument doc, string outFileName, IProgressUpdateInterface progress);
+        void ConvertSingleFile(string inputPath, string outputName, IProgressUpdateInterface progress);
     }
 }
