@@ -83,8 +83,8 @@ Global
 		{738F2015-0DC7-4C38-BBF0-90FD5C3C2518}.Release|x64.ActiveCfg = Release|x64
 		{738F2015-0DC7-4C38-BBF0-90FD5C3C2518}.Release|x86.ActiveCfg = Release|x86
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|Any CPU.ActiveCfg = Debug|x64
-		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.ActiveCfg = Debug|x64
-		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.Build.0 = Debug|x64
+		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.ActiveCfg = Debug|Win32
+		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x64.Build.0 = Debug|Win32
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x86.ActiveCfg = Debug|Win32
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Debug|x86.Build.0 = Debug|Win32
 		{260632CD-33BF-4324-9119-C542E9A9B516}.Release|Any CPU.ActiveCfg = Release|x64
@@ -186,7 +186,7 @@ Global
 		{4A9C9165-F68E-4BEE-BFB0-757568EB769D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{4A9C9165-F68E-4BEE-BFB0-757568EB769D}.Release|x64.ActiveCfg = Release|x64
 		{4A9C9165-F68E-4BEE-BFB0-757568EB769D}.Release|x86.ActiveCfg = Release|x86
-		{747EB3E8-4318-4A6F-BDB9-90F7DB4122D3}.Debug|Any CPU.ActiveCfg = Debug|x64
+		{747EB3E8-4318-4A6F-BDB9-90F7DB4122D3}.Debug|Any CPU.ActiveCfg = Debug|Win32
 		{747EB3E8-4318-4A6F-BDB9-90F7DB4122D3}.Debug|x64.ActiveCfg = Debug|x64
 		{747EB3E8-4318-4A6F-BDB9-90F7DB4122D3}.Debug|x86.ActiveCfg = Debug|Win32
 		{747EB3E8-4318-4A6F-BDB9-90F7DB4122D3}.Debug|x86.Build.0 = Debug|Win32
